Hide min_per_order=1

--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -184,7 +184,7 @@
                                                     {{ item.description|localize|rich_text }}
                                                 </div>
                                             {% endif %}
-                                            {% if item.min_per_order %}
+                                            {% if item.min_per_order and item.min_per_order > 1 %}
                                                 <p>
                                                     <small>
                                                         {% blocktrans trimmed with num=item.min_per_order %}
@@ -296,7 +296,7 @@
                                         {% if event.settings.show_quota_left %}
                                             {% include "pretixpresale/event/fragment_quota_left.html" with avail=item.cached_availability %}
                                         {% endif %}
-                                        {% if item.min_per_order %}
+                                        {% if item.min_per_order and item.min_per_order > 1 %}
                                             <p>
                                                 <small>
                                                     {% blocktrans trimmed with num=item.min_per_order %}
