Add product description to ticket editor

--- a/src/pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/index.html
+++ b/src/pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/index.html
@@ -287,6 +287,7 @@
                                 <option value="order">{% trans "Order code" %}</option>
                                 <option value="item">{% trans "Product name" %}</option>
                                 <option value="variation">{% trans "Variation name" %}</option>
+                                <option value="item_description">{% trans "Product description" %}</option>
                                 <option value="itemvar">{% trans "Product name and variation" %}</option>
                                 <option value="price">{% trans "Price" %}</option>
                                 <option value="attendee_name">{% trans "Attendee name" %}</option>
