--- a/src/pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/index.html
+++ b/src/pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/index.html
@@ -300,6 +300,8 @@
                                 <option value="event_admission_time">{% trans "Event admission time" %}</option>
                                 <option value="event_location">{% trans "Event location" %}</option>
                                 <option value="addons">{% trans "List of Add-Ons" %}</option>
+                                <option value="organizer">{% trans "Organizer name" %}</option>
+                                <option value="organizer_info_text">{% trans "Organizer info text" %}</option>
                                 <option value="other">{% trans "Other…" %}</option>
                             </select>
                             <textarea type="text" value="" class="input-block-level form-control"
