Better dashboard layout

--- a/src/pretix/control/templates/pretixcontrol/base.html
+++ b/src/pretix/control/templates/pretixcontrol/base.html
@@ -89,7 +89,7 @@
                             <span class="caret"></span></a>
                         <ul class="dropdown-menu event-dropdown" role="menu" data-event-typeahead
                             data-source="{% url "control:events.typeahead" %}">
-                            <li>
+                            <li class="query-holder">
                                 <div class="form-box">
                                     <input type="text" class="form-control"
                                             placeholder="{% trans "Search for events" %}"
