--- a/src/pretix/control/templates/pretixcontrol/event/payment.html
+++ b/src/pretix/control/templates/pretixcontrol/event/payment.html
@@ -22,8 +22,8 @@
                     Please note that EU Directive 2015/2366 bans surcharging payment fees for most common payment
                     methods within the European Union. Depending on the payment method, this might affect
                     selling to consumers only or to business customers as well. Depending on your country, this
-                    legislation might already be in place or become relevant from January 2018 the latest. This is not
-                    legal advice. If in doubt, consult a lawyer or refrain from charging payment fees.
+                    legislation might already be in effect or become relevant from January 2018 at the latest. This
+                    is not legal advice. If in doubt, consult a lawyer or refrain from charging payment fees.
                 {% endblocktrans %}
             </div>
             {% for provider in providers %}
