Show if team members have 2FA enabled

--- a/src/pretix/static/pretixcontrol/scss/main.scss
+++ b/src/pretix/static/pretixcontrol/scss/main.scss
@@ -395,3 +395,7 @@ body.loading #wrapper {
 .panel-title a[data-toggle="collapse"]:hover {
     background-color: #eeeeee;
 }
+
+.fa.disabled {
+    color: $text-muted;
+}
