--- a/src/pretix/control/templates/pretixcontrol/order/index.html
+++ b/src/pretix/control/templates/pretixcontrol/order/index.html
@@ -373,6 +373,14 @@
                                             {{ order.invoice_address.vat_id }}
                                             {% if order.invoice_address.vat_id_validated %}
                                                 <span class="fa fa-check" data-toggle="tooltip" title="{% blocktrans trimmed %}Valid EU VAT ID{% endblocktrans %}"></span>
+                                            {% else %}
+                                                <form class="form-inline helper-display-inline" method="post"
+                                                        action="{% url "control:event.order.checkvatid" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
+                                                    {% csrf_token %}
+                                                    <button class="btn btn-default btn-xs">
+                                                        {% trans "Check" %}
+                                                    </button>
+                                                </form>
                                             {% endif %}
                                         </dd>
                                     {% endif %}
