--- a/src/pretix/control/templates/pretixcontrol/event/tax_edit.html
+++ b/src/pretix/control/templates/pretixcontrol/event/tax_edit.html
@@ -2,21 +2,27 @@
 {% load i18n %}
 {% load bootstrap3 %}
 {% block title %}
-    {% if question %}
-        {% blocktrans with name=taxrule.name %}Tax rule: {{ name }}{% endblocktrans %}
+    {% if rule %}
+        {% blocktrans with name=rule.name %}Tax rule: {{ name }}{% endblocktrans %}
     {% else %}
         {% trans "Tax rule" %}
     {% endif %}
 {% endblock %}
 {% block inside %}
-    {% if question %}
-        <legend>{% blocktrans with name=taxrule.name %}Tax rule: {{ name }}{% endblocktrans %}</legend>
+    {% if rule %}
+        <legend>{% blocktrans with name=rule.name %}Tax rule: {{ name }}{% endblocktrans %}</legend>
     {% else %}
         <legend>{% trans "Tax rule" %}</legend>
     {% endif %}
     <form action="" method="post" class="form-horizontal">
         {% csrf_token %}
-        {% bootstrap_form form layout="horizontal" %}
+        {% bootstrap_form_errors form %}
+        {% bootstrap_field form.name layout="horizontal" %}
+        {% bootstrap_field form.rate layout="horizontal" %}
+        <legend>{% trans "Advanced settings" %}</legend>
+        {% bootstrap_field form.price_includes_tax layout="horizontal" %}
+        {% bootstrap_field form.eu_reverse_charge layout="horizontal" %}
+        {% bootstrap_field form.home_country layout="horizontal" %}
         <div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
                 {% trans "Save" %}
