--- a/src/pretix/control/templates/pretixcontrol/event/tax_edit.html
+++ b/src/pretix/control/templates/pretixcontrol/event/tax_edit.html
@@ -20,6 +20,15 @@
         {% bootstrap_field form.name layout="horizontal" %}
         {% bootstrap_field form.rate layout="horizontal" %}
         <legend>{% trans "Advanced settings" %}</legend>
+        <div class="alert alert-warning">
+            <span class="fa fa-w fa-legal fa-4x pull-left"></span>
+            {% blocktrans trimmed with docs="https://docs.pretix.eu/en/latest/user/events/taxes.html" %}
+                These settings are intended for advanced users. See the <a href="{{ docs }}">documentation</a>
+                for more information. Note that we are not responsible for the correct handling
+                of taxes in your ticket shop. If in doubt, please contact a lawyer or tax consultant.
+            {% endblocktrans %}
+            <div class="clearfix"></div>
+        </div>
         {% bootstrap_field form.price_includes_tax layout="horizontal" %}
         {% bootstrap_field form.eu_reverse_charge layout="horizontal" %}
         {% bootstrap_field form.home_country layout="horizontal" %}
