--- a/src/pretix/control/templates/pretixcontrol/order/index.html
+++ b/src/pretix/control/templates/pretixcontrol/order/index.html
@@ -9,6 +9,7 @@
     {% endblocktrans %}
 {% endblock %}
 {% block content %}
+    {% blocktrans asvar s_taxes %}taxes{% endblocktrans %}
     <h1>
         {% blocktrans trimmed with code=order.code %}
             Order details: {{ code }}
@@ -239,16 +240,22 @@
                                 {% if event.settings.display_net_prices %}
                                     <strong>{{ event.currency }} {{ line.net_price|floatformat:2 }}</strong>
                                     {% if line.tax_rate %}
-                                        <br /><small>{% blocktrans trimmed with rate=line.tax_rate %}
-                                        <strong>plus</strong> {{ rate }}% taxes
-                                    {% endblocktrans %}</small>
+                                        <br />
+                                        <small>
+                                            {% blocktrans trimmed with rate=line.tax_rate taxname=line.tax_rule.name|default:s_taxes %}
+                                                <strong>plus</strong> {{ rate }}% {{ taxname }}
+                                            {% endblocktrans %}
+                                        </small>
                                     {% endif %}
                                 {% else %}
                                     <strong>{{ event.currency }} {{ line.price|floatformat:2 }}</strong>
                                     {% if line.tax_rate %}
-                                        <br /><small>{% blocktrans trimmed with rate=line.tax_rate %}
-                                        incl. {{ rate }}% taxes
-                                    {% endblocktrans %}</small>
+                                        <br />
+                                        <small>
+                                            {% blocktrans trimmed with rate=line.tax_rate taxname=line.tax_rule.name|default:s_taxes %}
+                                                incl. {{ rate }}% {{ taxname }}
+                                            {% endblocktrans %}
+                                        </small>
                                     {% endif %}
                                 {% endif %}
                             </div>
@@ -265,17 +272,21 @@
                                     <strong>{{ event.currency }} {{ order.payment_fee_net|floatformat:2 }}</strong>
                                     {% if order.payment_fee_tax_rate %}
                                         <br/>
-                                        <small>{% blocktrans trimmed with rate=order.payment_fee_tax_rate %}
-                                            <strong>plus</strong> {{ rate }}% taxes
-                                        {% endblocktrans %}</small>
+                                        <small>
+                                            {% blocktrans trimmed with rate=order.payment_fee_tax_rate taxname=order.payment_fee_tax_rule.name|default:s_taxes %}
+                                                <strong>plus</strong> {{ rate }}% {{ taxname }}
+                                            {% endblocktrans %}
+                                        </small>
                                     {% endif %}
                                 {% else %}
                                     <strong>{{ event.currency }} {{ items.payment_fee|floatformat:2 }}</strong>
                                     {% if order.payment_fee_tax_rate %}
                                         <br/>
-                                        <small>{% blocktrans trimmed with rate=order.payment_fee_tax_rate %}
-                                            incl. {{ rate }}% taxes
-                                        {% endblocktrans %}</small>
+                                        <small>
+                                            {% blocktrans trimmed with rate=order.payment_fee_tax_rate taxname=order.payment_fee_tax_rule.name|default:s_taxes %}
+                                                incl. {{ rate }}% {{ taxname }}
+                                            {% endblocktrans %}
+                                        </small>
                                     {% endif %}
                                 {% endif %}
                             </div>
@@ -358,7 +369,20 @@
                                     <dd>{{ order.invoice_address.country.name|default:order.invoice_address.country_old }}</dd>
                                     {% if request.event.settings.invoice_address_vatid %}
                                         <dt>{% trans "VAT ID" %}</dt>
-                                        <dd>{{ order.invoice_address.vat_id }}</dd>
+                                        <dd>
+                                            {{ order.invoice_address.vat_id }}
+                                            {% if order.invoice_address.vat_id_validated %}
+                                                <span class="fa fa-check" data-toggle="tooltip" title="{% blocktrans trimmed %}Valid EU VAT ID{% endblocktrans %}"></span>
+                                            {% else %}
+                                                <form class="form-inline helper-display-inline" method="post"
+                                                        action="{% url "control:event.order.checkvatid" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
+                                                    {% csrf_token %}
+                                                    <button class="btn btn-default btn-xs">
+                                                        {% trans "Check" %}
+                                                    </button>
+                                                </form>
+                                            {% endif %}
+                                        </dd>
                                     {% endif %}
                                 </dl>
                             </div>
