Support custom fonts

--- a/src/pretix/control/templates/pretixcontrol/event/display.html
+++ b/src/pretix/control/templates/pretixcontrol/event/display.html
@@ -8,6 +8,7 @@
         <fieldset>
             <legend>{% trans "Display settings" %}</legend>
             {% bootstrap_field form.primary_color layout="horizontal" %}
+            {% bootstrap_field form.primary_font layout="horizontal" %}
             {% bootstrap_field form.logo_image layout="horizontal" %}
             {% bootstrap_field form.frontpage_text layout="horizontal" %}
             {% bootstrap_field form.show_variations_expanded layout="horizontal" %}
