--- a/src/pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/index.html
+++ b/src/pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/index.html
@@ -299,6 +299,8 @@
                                 <option value="event_admission">{% trans "Event admission date and time" %}</option>
                                 <option value="event_admission_time">{% trans "Event admission time" %}</option>
                                 <option value="event_location">{% trans "Event location" %}</option>
+                                <option value="invoice_name">{% trans "Invoice address: name" %}</option>
+                                <option value="invoice_company">{% trans "Invoice address: company" %}</option>
                                 <option value="addons">{% trans "List of Add-Ons" %}</option>
                                 <option value="organizer">{% trans "Organizer name" %}</option>
                                 <option value="organizer_info_text">{% trans "Organizer info text" %}</option>
