--- a/src/pretix/plugins/statistics/templates/pretixplugins/statistics/index.html
+++ b/src/pretix/plugins/statistics/templates/pretixplugins/statistics/index.html
@@ -6,6 +6,11 @@
 {% block title %}{% trans "Statistics" %}{% endblock %}
 {% block content %}
     <h1>{% trans "Statistics" %}</h1>
+    {% if request.event.has_subevents %}
+        <form class="form-inline helper-display-inline" action="" method="get">
+            {% include "pretixcontrol/event/fragment_subevent_choice_simple.html" %}
+        </form>
+    {% endif %}
     {% if has_orders %}
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -21,6 +26,14 @@
             </div>
             <div class="panel-body">
                 <div id="rev_chart" class="chart"></div>
+                {% if request.GET.subevent %}
+                    <div class="alert alert-info">
+                        {% blocktrans trimmed context "subevent" %}
+                            If you select a single date, payment method fees will not be listed here as it might not be clear which
+                            date they belong to.
+                        {% endblocktrans %}
+                    </div>
+                {% endif %}
             </div>
         </div>
         <div class="panel panel-default">
