Improve typeahead on dashboard page

--- a/src/pretix/static/pretixcontrol/scss/_dashboard.scss
+++ b/src/pretix/static/pretixcontrol/scss/_dashboard.scss
@@ -156,6 +156,10 @@
 
   .focused.dropdown-menu {
     display: block;
+    overflow: hidden;
+  }
+  .event-dropdown .event-name-full, .mobile-event-dropdown .event-name-full {
+    white-space: normal;
   }
 }
 
