Allow subevent filtering in dashboard

--- a/src/pretix/control/templates/pretixcontrol/event/fragment_subevent_choice_simple.html
+++ b/src/pretix/control/templates/pretixcontrol/event/fragment_subevent_choice_simple.html
@@ -9,5 +9,5 @@
             </option>
         {% endfor %}
     </select>
-    <button class="btn btn-primary" type="submit">{% trans "Filter" %}</button>
+    <button class="btn btn-primary" type="submit">{% trans "Show" %}</button>
 </p>
