List and calendar for all organizers

--- a/src/pretix/control/templates/pretixcontrol/organizers/index.html
+++ b/src/pretix/control/templates/pretixcontrol/organizers/index.html
@@ -1,5 +1,6 @@
 {% extends "pretixcontrol/base.html" %}
 {% load i18n %}
+{% load eventurl %}
 {% block title %}{% trans "Organizers" %}{% endblock %}
 {% block content %}
 	<h1>{% trans "Organizers" %}</h1>
