--- a/src/pretix/static/pretixcontrol/scss/_forms.scss
+++ b/src/pretix/static/pretixcontrol/scss/_forms.scss
@@ -175,3 +175,11 @@ pre.mail-preview {
   }
 
 }
+.metadata-group {
+  .form-group {
+    margin: 0 0 10px 0;
+  }
+  .row label {
+    padding-top: 7px;
+  }
+}
